Revise UML section and update build instructions
Updated the README to simplify class diagram section and changed compilation and execution instructions to use batch files.